[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0"
num-format = "0.4"
chrono = "0.4"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
name = "wordle-solve"
path = "src/wordle-solve/main.rs"

[[bin]]
name = "wordle-solve-all"
path = "src/wordle-solve-all/main.rs"

[[bin]]
name = "wordle-list-solutions"
path = "src/wordle-list-solutions/main.rs"

[[bin]]
name = "wordle-import-decision-tree"
path = "src/wordle-import-decision-tree/main.rs"

[[bin]]
name = "wordle-build-decision-tree"
path = "src/wordle-build-decision-tree/main.rs"